@@ -21,6 +21,7 @@ Following changes may create regressions for some external modules, but were nec
 * All methods set_draft() were renamed into setDraft().
 * Removed deprecated function function test_sql_and_script_inject that was replaced with testSqlAndScriptInject.
 * Method load_measuring_units were renamed into selectMeasuringUnits and select_measuring_units was deprecated.
+* Hidden option CHANGE_ORDER_CONCAT_DESCRIPTION were renamed into MAIN_CHANGE_ORDER_CONCAT_DESCRIPTION
 
 
 ***** ChangeLog for 9.0.1 compared to 9.0.0 *****
